[package]
name = "automan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
octocrab = "0.16"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5"
